# webmon-api

./: .gitignore  auth.py  db.py  main.py  models.py  payments.py  pyproject.toml  requirements.txt  reset_db.py
ai/: __init__.py  helpers.py
ai/agent/: __init__.py  react_agent.py  tools.py
docs/: checkout.html  checkout.js  index.html  pricing.html  privacy.html  script.js  site.webmanifest  style.css  terms.html  three-bg.js
src/: models.py  schemas.py
src/core/: config.py  database.py  security.py
src/domains/agents/: routers.py
src/domains/agents/embeddings/: cohere.py
src/domains/agents/graph/: edges.py  nodes.py  react_agent.py  state.py
src/domains/agents/storage/: chroma.py
src/domains/agents/tools/: search.py
src/domains/auth/: routers.py
src/domains/billing/: payments.py  routers.py
src/helper/: validators.py
