[project]
name = "webmon-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.136.3",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-cohere>=0.6.0",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.2",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.25",
]
